# itr_ros_x500

./: .gitignore  README.md  docker-compose.yml  requirements.txt  start.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile  entrypoint.sh
itr_comms_x500/: README.md  package.xml  setup.cfg  setup.py
itr_comms_x500/itr_comms_x500/: __init__.py  comms.py
itr_controller_x500/: package.xml  setup.cfg  setup.py
itr_controller_x500/itr_controller_x500/: __init__.py  controller.py  mpc.py  sls.py
itr_controller_x500/launch/: controller.launch.py
itr_controller_x500/src/: controller.py
itr_description_x500/: package.xml  setup.cfg  setup.py
itr_description_x500/config/: 1868_x500_itr_real  1868_x500_itr_sim  README  ros_gz_bridge_map.yml
itr_description_x500/itr_description_x500/: __init__.py  x500.py
itr_description_x500/models/: x500_itr.sdf
itr_description_x500/worlds/: itr.sdf
itr_mission_x500/: package.xml  setup.cfg  setup.py
itr_mission_x500/config/: essential_topics.txt
itr_mission_x500/itr_mission_x500/: __init__.py  mission.py  trajectory.py
itr_mission_x500/itr_mission_x500/scripts/: simple_mpc_mission.py  test_mission.py
itr_mission_x500/launch/: mission.deploy.py  mission.launch.py
itr_mocap_x500/: package.xml  setup.cfg  setup.py
itr_px4_x500/: package.xml  setup.cfg  setup.py
itr_sim_x500/: package.xml  setup.cfg  setup.py
itr_statemachine_x500/: package.xml  setup.cfg  setup.py
itr_statemachine_x500/itr_statemachine_x500/: __init__.py  comms.py  statemachine.py  statemachine_old.py
itr_statemachine_x500/launch/: statemachine.launch.py
itr_statemachine_x500/src/: statemachine.py
