<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>itr_mission_x500</name>
  <version>0.0.1</version>
  <description>Main Mission Operations Code for x500 Drone at ITR. Launches State Machine, Controller, Logging etc.</description>
  <maintainer email="antonio.steiger@tum.de">Antonio Steiger</maintainer>
  <license>Apache 2.0</license>

  <depend>itr_controller_x500</depend>
  <depend>itr_statemachine_x500</depend>
  <depend>itr_mocap_x500</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>