<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>itr_sim_x500</name>
  <version>0.0.1</version>
  <description>ITR Holybro x500 Drone Simulation</description>
  <maintainer email="antonio.steiger@tum.de">Antonio Steiger</maintainer>
  <license>Apache 2.0</license>
  
  <depend>itr_description_x500</depend>
  <!-- <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz_sim</depend> -->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>