<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>itr_statemachine_x500</name>
  <version>0.0.1</version>
  <description>Statemachine for x500 Drone at ITR</description>
  <maintainer email="antonio.steiger@tum.de">Antonio Steiger</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>yasmin_viewer</depend>
  <depend>itr_comms_x500</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>